Fix: keep hashed visible

--- a/html/secret_santa/css/index.css
+++ b/html/secret_santa/css/index.css
@@ -42,7 +42,7 @@
     padding: -0;
     line-height: 100px;
     background-color: inherit;
-    /* border-left: solid 2px #8abfb7; */
+    border-left: solid 2px #8abfb7;
     border-radius: 0;
     background-size: 200% !important;
     transition-timing-function: ease-out;
